default/immich/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: immich-route
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.unrelated.family`)
      kind: Rule
      services:
        - name: immich-server
          port: 3001
  tls:
    secretName: unrelated-family-tls
